--- a/bower.json
+++ b/bower.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "angular": "1.6.2",
     "angular-route": "1.6.2",
-    "bootstrap": "3.3.7"
+    "bootstrap": "3.3.7",
+    "ng-image-input-with-preview": "0.0.6"
   }
 }
