--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "grunt-contrib-connect": "0.7.1",
     "grunt-contrib-jshint": "0.11.3",
     "grunt-contrib-watch": "0.6.1",
+    "grunt-gh-pages": "2.0.0",
     "load-grunt-tasks": "0.4.0"
   }
 }
